--- a/components/consumer/shared/scss/_styleguide.scss
+++ b/components/consumer/shared/scss/_styleguide.scss
@@ -240,6 +240,9 @@ $list-icon-grey: url('../img/view-list-icon-grey.svg');
   height: 12px;
   background-size: cover;
   background: url('../../shared/img/pbg-powered-by-logo.svg');
+  &.pbg-logo-powered-by-gray {
+    background: url('../../shared/img/pbg-powered-by-logo-gray.svg');
+  }
 }
 
 // Design System
